# ak-tools

./: .dockerignore  .env  .gitconfig  .gitignore  .secrets  AkTools.lean  Dockerfile  Makefile  README.md  dotfiles  lake-manifest.json  lakefile.lean  pyproject.toml
ak_tools/: __init__.py  __main__.py  aoai.py  config.py  gpt.py  main.py  oai.py  read.py  settings.py  utils.py  write.py
docs/: setting-up-lean4.md  setting-up-python.md
scripts/: Untitled-1.py
users/7766612/: .env  .gitignore
users/7766612/dotfiles/: .tmux.conf  bashrc  bashrc-appearance  ipython_config.py  settings.json  vimrc
util/: aoai.py  gpt.py  oai.py  utils.py
