[tool.poetry]
name = "ak-tools"
version = "0.1.0"
description = "Utility files and tools (python modules, bash scripts, etc.)"
authors = ["Amir Kantor <amir.kantor@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "ak_tools" },
]
include = ["pyproject.toml"]

[tool.poetry.scripts]
ak-tools = "ak_tools.main:main"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.8"
tiktoken = "^0.5.2"
python-dotenv = "^1.0.0"
ipykernel = "^6.27.1"
nest-asyncio = "^1.5.8"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.3"
toml = "^0.10.2"
pydantic-settings = "^2.1.0"
platformdirs = "^4.1.0"
cleanpy = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
