[tool.poetry]
name = "ak-tools"
version = "0.1.0"
description = "Integrated Python / Lean4 project template and toolbox, system-wide dotfiles, and opinionated setup guides."
authors = ["Amir Kantor <amir.kantor@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "ak_tools" },
]
include = ["pyproject.toml"]

[tool.poetry.scripts]
ak-tools = "ak_tools.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"  # should be "^3.11" # TODO
openai = "^1.3.8"
tiktoken = "^0.5.2"
python-dotenv = "^1.0.0"
ipykernel = "^6.27.1"
nest-asyncio = "^1.5.8"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
platformdirs = "^4.1.0"
cleanpy = "^0.4.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
scipy = "^1.11.4"
transformers = "^4.36.2"
datasets = {extras = ["audio", "vision"], version = "^2.16.1"}
evaluate = "^0.4.1"
annotated-types = "^0.6.0"
typeguard = "^4.1.5"
nptyping = {extras = ["complete"], version = "^2.5.0"}
jsonlines = "^4.0.0"
jsonpickle = "^3.0.2"
httpx = {extras = ["cli", "http2"], version = "^0.26.0"}
fastapi = {extras = ["all"], version = "^0.108.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
