[tool.poetry]
name = "ak-tools"
version = "0.1.0"
description = "Blueprint for Python and/or Lean projects (can be used for either) including setup guides, dotfiles, and a set of tools and utilities in Python and Lean."
authors = ["Amir Kantor <amir.kantor@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "ak_tools" },
]
include = ["pyproject.toml"]

[tool.poetry.scripts]
ak-tools = "ak_tools.main:main"

[tool.poetry.dependencies]
python = "^3.9"
openai = "*"
tiktoken = "*"
ipykernel = "*"
nest-asyncio = "*"
typer = {extras = ["all"], version = "*"}
pydantic = "*"
pydantic-settings = "*"
platformdirs = "*"
cleanpy = "*"
numpy = "*"
pandas = "*"
annotated-types = "*"
typeguard = "*"
nptyping = {extras = ["complete"], version = "*"}
jsonlines = "*"
jsonpickle = "*"
toml = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
scipy = "*"
transformers = "*"
datasets = {extras = ["audio", "vision"], version = "*"}
evaluate = "*"
httpx = {extras = ["cli", "http2"], version = "*"}
fastapi = {extras = ["all"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
